--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 *.userosscache
 *.sln.docstates
 StyleCop.Cache
+_ReSharper*/
+*.[Rr]e[Ss]harper
+*.DotSettings.user
 
 # Build results
 [Dd]ebug/
@@ -17,11 +20,14 @@ x64/
 x86/
 build/
 bld/
-[Bb]in/
 [Oo]bj/
 
+# Ignore bin/ content but keep web app references
+**/[Bb]in/*
+!**/[Bb]in/*.refresh
+
 # Roslyn cache directories
-*.ide/
+*.vs/
 
 # Visual Studio profiler
 *.psess
@@ -42,6 +48,7 @@ Doc/Help/
 *.nupkg
 # The packages folder can be ignored because of Package Restore
 **/packages/*
+*.lock.json
 
 # Others
 ~$*
