--- a/Demos/ListControlDemoVB/ListControlDemoVB.vbproj
+++ b/Demos/ListControlDemoVB/ListControlDemoVB.vbproj
@@ -1,324 +1,39 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
-  <PropertyGroup>
-    <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.30729</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{75B45025-6092-4635-A34C-D67F0285B354}</ProjectGuid>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ApplicationIcon>App.ico</ApplicationIcon>
-    <AssemblyKeyContainerName>
-    </AssemblyKeyContainerName>
-    <AssemblyName>ListControlDemoVB</AssemblyName>
-    <AssemblyOriginatorKeyFile>ListControlDemoVB.snk</AssemblyOriginatorKeyFile>
-    <AssemblyOriginatorKeyMode>None</AssemblyOriginatorKeyMode>
-    <DefaultClientScript>JScript</DefaultClientScript>
-    <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
-    <DefaultTargetSchema>IE50</DefaultTargetSchema>
-    <DelaySign>false</DelaySign>
-    <OutputType>WinExe</OutputType>
-    <OptionCompare>Binary</OptionCompare>
-    <OptionExplicit>On</OptionExplicit>
-    <OptionStrict>On</OptionStrict>
-    <RootNamespace>ListControlDemoVB</RootNamespace>
-    <StartupObject>
-    </StartupObject>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <MyType>WindowsFormsWithCustomSubMain</MyType>
-    <UpgradeBackupLocation>
-    </UpgradeBackupLocation>
-    <OldToolsVersion>3.5</OldToolsVersion>
-    <PublishUrl>publish\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
-    <DebugSymbols>true</DebugSymbols>
-    <DefineDebug>true</DefineDebug>
-    <DefineTrace>true</DefineTrace>
-    <OutputPath>bin\Debug\</OutputPath>
-    <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>
-    </DocumentationFile>
-    <WarningLevel>1</WarningLevel>
-    <NoWarn>42016,42017,42018,42019,42032,42353,42354,42355</NoWarn>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <CodeAnalysisRuleSet>..\EWSListControlsDemos.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
-    <DefineTrace>true</DefineTrace>
-    <OutputPath>bin\Release\</OutputPath>
-    <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>
-    </DocumentationFile>
-    <Optimize>true</Optimize>
-    <WarningLevel>1</WarningLevel>
-    <NoWarn>42016,42017,42018,42019,42032,42353,42354,42355</NoWarn>
-    <PlatformTarget>x86</PlatformTarget>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System">
-      <Name>System</Name>
-    </Reference>
-    <Reference Include="System.Data">
-      <Name>System.Data</Name>
-    </Reference>
-    <Reference Include="System.Drawing">
-      <Name>System.Drawing</Name>
-    </Reference>
-    <Reference Include="System.Windows.Forms">
-      <Name>System.Windows.Forms</Name>
-    </Reference>
-    <Reference Include="System.Xml">
-      <Name>System.XML</Name>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Import Include="Microsoft.VisualBasic" />
-    <Import Include="System" />
-    <Import Include="System.Collections" />
-    <Import Include="System.Data" />
-    <Import Include="System.Diagnostics" />
-    <Import Include="System.Drawing" />
-    <Import Include="System.Windows.Forms" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AddressFooter.Designer.vb">
-      <DependentUpon>AddressFooter.vb</DependentUpon>
-    </Compile>
-    <Compile Include="AddressFooter.vb">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="AddressHeader.Designer.vb">
-      <DependentUpon>AddressHeader.vb</DependentUpon>
-    </Compile>
-    <Compile Include="AddressHeader.vb">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="AddressRow.Designer.vb">
-      <DependentUpon>AddressRow.vb</DependentUpon>
-    </Compile>
-    <Compile Include="AddressRow.vb">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="CheckBoxListTestForm.Designer.vb">
-      <DependentUpon>CheckBoxListTestForm.vb</DependentUpon>
-    </Compile>
-    <Compile Include="CheckBoxListTestForm.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ComboBoxTestForm.Designer.vb">
-      <DependentUpon>ComboBoxTestForm.vb</DependentUpon>
-    </Compile>
-    <Compile Include="ComboBoxTestForm.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="DataListTestForm.Designer.vb">
-      <DependentUpon>DataListTestForm.vb</DependentUpon>
-    </Compile>
-    <Compile Include="DataListTestForm.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="DataNavigatorTestForm.Designer.vb">
-      <DependentUpon>DataNavigatorTestForm.vb</DependentUpon>
-    </Compile>
-    <Compile Include="DataNavigatorTestForm.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ExtendedTreeViewTestForm.Designer.vb">
-      <DependentUpon>ExtendedTreeViewTestForm.vb</DependentUpon>
-    </Compile>
-    <Compile Include="ExtendedTreeViewTestForm.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="GlobalSuppressions.vb" />
-    <Compile Include="MainForm.Designer.vb">
-      <DependentUpon>MainForm.vb</DependentUpon>
-    </Compile>
-    <Compile Include="MainForm.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MenuRow.Designer.vb">
-      <DependentUpon>MenuRow.vb</DependentUpon>
-    </Compile>
-    <Compile Include="MenuRow.vb">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="My Project\AssemblyInfo.vb" />
-    <Compile Include="PhoneRow.Designer.vb">
-      <DependentUpon>PhoneRow.vb</DependentUpon>
-    </Compile>
-    <Compile Include="PhoneRow.vb">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="RadioButtonListTestForm.Designer.vb">
-      <DependentUpon>RadioButtonListTestForm.vb</DependentUpon>
-    </Compile>
-    <Compile Include="RadioButtonListTestForm.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="RelationTestForm.Designer.vb">
-      <DependentUpon>RelationTestForm.vb</DependentUpon>
-    </Compile>
-    <Compile Include="RelationTestForm.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="TreeViewDropDown.Designer.vb">
-      <DependentUpon>TreeViewDropDown.vb</DependentUpon>
-    </Compile>
-    <Compile Include="TreeViewDropDown.vb">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UserControlComboTestForm.Designer.vb">
-      <DependentUpon>UserControlComboTestForm.vb</DependentUpon>
-    </Compile>
-    <Compile Include="UserControlComboTestForm.vb">
-      <SubType>Form</SubType>
-    </Compile>
-    <Content Include="Images\Audio.bmp" />
-    <Content Include="Images\Bitmap.bmp" />
-    <Content Include="Images\BookClosed.bmp" />
-    <Content Include="Images\BookOpen.bmp" />
-    <Content Include="Images\Collapse.bmp" />
-    <Content Include="Images\Disk.bmp" />
-    <Content Include="Images\Document.bmp" />
-    <Content Include="Images\Expand.bmp" />
-    <Content Include="Images\Folder.bmp" />
-    <Content Include="Images\FolderClosed.bmp" />
-    <Content Include="Images\FolderOpen.bmp" />
-    <Content Include="Images\StateCritical.bmp" />
-    <Content Include="Images\StateNo.bmp" />
-    <Content Include="Images\StateSerious.bmp" />
-    <Content Include="Images\StateWarning.bmp" />
-    <Content Include="Images\StateYes.bmp" />
-    <Content Include="Images\Waste.bmp" />
-    <None Include="ListControlDemoVB.snk" />
-    <EmbeddedResource Include="AddressFooter.resx">
-      <DependentUpon>AddressFooter.vb</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="AddressHeader.resx">
-      <DependentUpon>AddressHeader.vb</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="AddressRow.resx">
-      <DependentUpon>AddressRow.vb</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="CheckBoxListTestForm.resx">
-      <DependentUpon>CheckBoxListTestForm.vb</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ComboBoxTestForm.resx">
-      <DependentUpon>ComboBoxTestForm.vb</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DataListTestForm.resx">
-      <DependentUpon>DataListTestForm.vb</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DataNavigatorTestForm.resx">
-      <DependentUpon>DataNavigatorTestForm.vb</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ExtendedTreeViewTestForm.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>ExtendedTreeViewTestForm.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MainForm.resx">
-      <DependentUpon>MainForm.vb</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MenuRow.resx">
-      <DependentUpon>MenuRow.vb</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PhoneRow.resx">
-      <DependentUpon>PhoneRow.vb</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="RadioButtonListTestForm.resx">
-      <DependentUpon>RadioButtonListTestForm.vb</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="RelationTestForm.resx">
-      <DependentUpon>RelationTestForm.vb</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="TreeViewDropDown.resx">
-      <DependentUpon>TreeViewDropDown.vb</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UserControlComboTestForm.resx">
-      <DependentUpon>UserControlComboTestForm.vb</DependentUpon>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Content Include="App.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{B4F97281-0DBD-4835-9ED8-7DFB966E87FF}" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Source\EWSListControls.csproj">
-      <Project>{8b77e8dd-a857-4a6e-bca3-93ac56b80f57}</Project>
-      <Name>EWSListControls</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework Client Profile</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.2.0">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 2.0 %28x86%29</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.0">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.0 %28x86%29</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
-    <PostBuildEvent>IF NOT EXIST $(TargetDir)TestData.mdb COPY $(ProjectDir)..\TestData.mdb $(TargetDir)</PostBuildEvent>
-  </PropertyGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<OutputType>WinExe</OutputType>
+		<TargetFrameworks>net40</TargetFrameworks>
+		<UseWindowsForms>true</UseWindowsForms>
+		<GenerateAssemblyTitleAttribute>False</GenerateAssemblyTitleAttribute>
+		<GenerateAssemblyVersionAttribute>False</GenerateAssemblyVersionAttribute>
+		<GenerateAssemblyFileVersionAttribute>False</GenerateAssemblyFileVersionAttribute>
+		<GenerateAssemblyInformationalVersionAttribute>False</GenerateAssemblyInformationalVersionAttribute>
+		<GenerateAssemblyCompanyAttribute>False</GenerateAssemblyCompanyAttribute>
+		<GenerateAssemblyConfigurationAttribute>False</GenerateAssemblyConfigurationAttribute>
+		<GenerateAssemblyProductAttribute>False</GenerateAssemblyProductAttribute>
+		<AssemblyOriginatorKeyFile>ListControlDemoVB.snk</AssemblyOriginatorKeyFile>
+		<SignAssembly>true</SignAssembly>
+		<EnableNETAnalyzers>true</EnableNETAnalyzers>
+		<AnalysisMode>AllEnabledByDefault</AnalysisMode>
+		<ApplicationIcon>App.ico</ApplicationIcon>
+	</PropertyGroup>
+	<ItemGroup>
+		<Content Include="App.ico" />
+	</ItemGroup>
+	<ItemGroup>
+		<Content Include="..\TestData.mdb" Link="TestData.mdb">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\Source\EWSoftware.ListControls.csproj" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0-windows'">
+		<PackageReference Include="System.Data.OleDb">
+			<Version>7.0.0</Version>
+		</PackageReference>
+	</ItemGroup>
+	<ItemGroup>
+		<Import Include="System.Drawing" />
+		<Import Include="System.Windows.Forms" />
+	</ItemGroup>
 </Project>
